# templi

./: .gitignore  README.md  pyproject.toml  test_output.txt
src/templi/: __init__.py  main.py
src/templi/cli/: parser.py  printer.py
src/templi/core/: computed_resolver.py  condition_evaluator.py  git_auth.py  input_collector.py  manifest_lock.py  manifest_manager.py  models.py  orchestrator.py  plugin_loader.py  plugin_ref.py  plugin_variable_refs.py  runtime_config.py  template_engine.py  variable_layers.py
src/templi/hooks/: edit_file.py  edit_json.py  render_templates.py  run_command.py  run_script.py  script_runner.py
src/templi/utils/: file_utils.py  jinja_filters.py  value_format.py
tests/: test_advanced_compatibility.py  test_compatibility_gaps.py  test_edit_json.py  test_git_auth.py  test_manifest_lock.py  test_nested_inputs.py  test_plugin_ref.py  test_step01_cli.py  test_step02_plugin_loader.py  test_step03_condition.py  test_step04_input_collector.py  test_step05_computed.py  test_step06_template_engine.py  test_step07_10_hooks.py  test_step11_manifest.py  test_step12_orchestrator.py  test_variable_layers.py
tests/fixtures/plugin-com-condicoes/: plugin.yaml
tests/fixtures/plugin-com-edits/: plugin.yaml
tests/fixtures/plugin-completo/: plugin.yaml
tests/fixtures/plugin-generator-like/: plugin.yaml
tests/fixtures/plugin-generator-like/templates/{{full_plugin_name}}/: README.md  plugin.yaml
tests/fixtures/plugin-kafka-like/: plugin.yaml
tests/fixtures/plugin-schema-invalido/: plugin.yaml
tests/fixtures/plugin-simples/: plugin.yaml
