[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "templi"
version = "0.1.0"
description = "Ferramenta Python para aplicar plugins YAML em projetos"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "InquirerPy>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
templi = "templi.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
